<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".views.AlbumsTracksActivity">

    <include android:id="@+id/toolbar" layout="@layout/toolbar" />
    <include layout="@layout/app_image" />

    <TextView
        android:id="@+id/tvErrors"
        android:layout_marginTop="140dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text=""
        android:textColor="@color/red_error"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/txt_name_title"
        android:textColor="@color/white"
        android:layout_marginTop="200dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/track_name_hint" />

    <EditText
        android:id="@+id/txt_name"
        android:layout_width="394dp"
        android:layout_height="56dp"
        android:layout_marginTop="230dp"
        android:ems="10"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:gravity="start|top"
        android:textColor="@color/white"
        app:backgroundTint="@color/secondary_purple"
        android:hint="ingrese el nombre de la cancion"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/txt_duration_title"
        android:textColor="@color/white"
        android:layout_marginTop="310dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/track_duration_hint" />

    <EditText
        android:id="@+id/txt_duration"
        android:layout_width="394dp"
        android:layout_height="56dp"
        android:layout_marginTop="340dp"
        android:ems="10"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:gravity="start|top"
        android:hint="ingrese duracion de la cancion"
        android:textColor="@color/white"
        app:backgroundTint="@color/secondary_purple"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btn_create_tie_track_to_album"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:text="@string/tie_track" />


</FrameLayout>