<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AlbumsDetailActivity"
    android:background="@color/background">

    <RelativeLayout
        android:id="@+id/principal"
        android:layout_width="408dp"
        android:layout_height="259dp"
        android:background="@color/black"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <Space
            android:id="@+id/spacer"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_description" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spacer"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textSize="21sp"
            tools:text="The 2nd Law" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivCover"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@id/title"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            app:civ_border_color="@color/white"
            app:civ_border_width="1dp" />

        <TextView
            android:id="@+id/artistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginStart="15dp"
            android:text="@string/detail_album_artist"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/artistName"
            android:layout_marginStart="15dp"
            android:textColor="@color/white"
            android:textSize="21sp"
            tools:text="Salsa" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gender"
            android:layout_marginStart="15dp"
            android:textColor="@color/white"
            tools:text="2012" />

        <TextView
            android:id="@+id/tvAddSong"
            android:layout_width="190dp"
            android:layout_height="58dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="132dp"
            android:layout_marginBottom="10dp"
            android:text="@string/add_song_to_album_title"
            android:textColor="@color/white"
            android:textSize="21sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_tie_track_to_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom|end"
            android:layout_marginStart="18dp"
            android:layout_marginTop="182dp"
            android:layout_marginEnd="334dp"
            android:layout_marginBottom="21dp"
            app:backgroundTint="@color/cardview_dark_background"
            app:srcCompat="@android:drawable/ic_input_add"
            android:contentDescription="@string/add_song"
            app:tint="@android:color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="409dp"
        android:layout_height="469dp"
        android:layout_below="@id/principal"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="261dp">

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/detail_album_description"
            android:textColor="@color/white"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/list_tracks_to_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="230dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/tracks"
            android:textColor="@color/white"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/descriptionText"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/white"
            tools:text="Lorem ipsum dolor sitor nec elit. Mauris lobortis, lorem eu imperdiet egestas, neque ex tristique dui, et blandit orci lacus vitae nunc. Morbi congue lacus ac nisi laoreet, ac gravida mi facilisis. Nullam vulputate dui est, eget luctus turpis posuere vitae. Integer elementum erat in urna sollicitudin ullamcorper. Donec egestas tincidunt lectus, et convallis velit. Donec venenatis risus odio, nec consectetur purus faucibus non. Curabitur scelerisque neque eu enim pulvinar tempor." />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTracks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="530dp" />
</RelativeLayout>