<resources>
    <string name="app_name">G11-Vinilos</string>
    <string name="detail_album_artist">Genero</string>
    <string name="detail_album_description">Descripcion</string>
    <string name="albums">Álbumes</string>
    <string name="collectors">Coleccionistas</string>
    <string name="artists">Artistas</string>
    <string name="welcome_title">Bienvenido a MusicApp</string>
    <string name="welcome_heading">Donde está toda tú música en un solo lugar</string>
    <string name="albums_menu_text">Catalogo de albumes</string>
    <string name="artists_menu_text">Catalogo de artistas</string>
    <string name="collector_menu_text">Catalogo de coleccionistas</string>
    <string name="create_album_menu_text">Crear album</string>
    <string name="description_Row">GOBACKROWIMAGE</string>
    <string name="birthday">Fecha creacion de la banda</string>
    <string name="collector_subtitle">Coleccionista destacado</string>
...
