<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/left_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/description_Row"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/toolbar_text"
            android:textColor="@color/white" />
    </RelativeLayout>

</RelativeLayout>